[package]
authors = ["Midas Lambrichts <midaslamb@gmail.com>", "Stijn Caerts", "Pieter-Jan Coenen"]
edition = "2018"
name = "hash-code-2021"
version = "0.1.0"

[lib]
name = "hash_code_2021"

[[bin]]
name = "hash_code_2021_cli"
path = "src/main.rs"

[dependencies]
structopt = "0.3"
walkdir = "2"

[build-dependencies]
walkdir = "2"
zip = "0.5"
